# dx-auth

./: .gitignore  .gitleaks.toml  CONFIG_DIOXUS.md  CONFIG_LEPTOS.md  CUSTOMIZING.md  Cargo.toml  INSTALL_DIOXUS.md  INSTALL_LEPTOS.md  INTEGRATION.md  README.md  SECURITY.md  TODO.md  USAGE.md  USAGE_DIOXUS.md  USAGE_LEPTOS.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
auth/: Cargo.toml
auth/assets/: app.css
auth/src/: auth.rs  mail.rs  main.rs
auth/src/components/: mod.rs
auth/src/components/login_panel/: component.rs  style.css
crates/arium/: Cargo.toml  README.md
crates/arium-act/: Cargo.toml
crates/arium-act/src/: extensions.rs  gate.rs
crates/arium-authz/: Cargo.toml  README.md
crates/arium-authz/src/: authz.rs  lib.rs
crates/arium-dioxus/: Cargo.toml
crates/arium-dioxus/src/: lib.rs  server.rs
crates/arium-dioxus/src/ui/: mod.rs  permissions.rs  require_auth.rs  resource_gate.rs
crates/arium-dioxus/src/ui/account/: account_screens.rs  mod.rs
crates/arium-dioxus/src/ui/admin/: audit_log.rs  mod.rs  role_screens.rs
crates/arium-dioxus/src/ui/components/: mod.rs
crates/arium-dioxus/src/ui/components/avatar/: component.rs
crates/arium-dioxus/src/ui/components/button/: component.rs
crates/arium-dioxus/src/ui/components/card/: component.rs
crates/arium-dioxus/src/ui/components/label/: component.rs
crates/arium-dioxus/src/ui/components/select/: component.rs
crates/arium-dioxus/src/ui/components/tabs/: component.rs
crates/arium-dioxus/src/ui/forgot_password/: component.rs
crates/arium-dioxus/src/ui/login_panel/: component.rs  style.css
crates/arium-dioxus/src/ui/mfa/: challenge.rs  mod.rs  setup.rs
crates/arium-dioxus/src/ui/passkeys/: mod.rs  webauthn_client.rs
crates/arium-dioxus/src/ui/reset_password/: component.rs  mod.rs  style.css
crates/arium-dioxus/src/ui/tokens/: component.rs  mod.rs
crates/arium-dioxus/src/ui/verify_email/: component.rs  mod.rs
crates/arium-dioxus/tests/: server_fn_roundtrip.rs  wasm_client.rs
crates/arium-dioxus/tests/common/: mod.rs
crates/arium-leptos/: Cargo.toml
crates/arium-leptos/src/: lib.rs  server.rs
crates/arium-leptos/src/ui/: auth_stylesheets.rs  mod.rs  oauth_providers.rs  permissions.rs  require_auth.rs  resource_gate.rs
crates/arium-leptos/src/ui/account/: account_screens.rs  mod.rs
crates/arium-leptos/src/ui/admin/: admin_screens.rs  audit_log.rs  mod.rs  role_screens.rs  style.css
crates/arium-leptos/src/ui/components/: icons.rs  mod.rs
crates/arium-leptos/src/ui/components/alert_dialog/: component.rs
crates/arium-leptos/src/ui/components/avatar/: component.rs
crates/arium-leptos/src/ui/components/badge/: component.rs
crates/arium-leptos/src/ui/components/button/: component.rs
crates/arium-leptos/src/ui/components/card/: component.rs
crates/arium-leptos/src/ui/components/checkbox/: component.rs
crates/arium-leptos/src/ui/forgot_password/: component.rs
crates/arium-leptos/src/ui/login_panel/: component.rs
crates/arium-leptos/src/ui/mfa/: challenge.rs  mod.rs  setup.rs  style.css
crates/arium-leptos/src/ui/reset_password/: component.rs
crates/arium-leptos/src/ui/tokens/: component.rs  style.css
crates/arium-leptos/src/ui/verify_email/: component.rs  style.css
crates/arium-leptos/tests/: server_fn_roundtrip.rs  wasm_client.rs
crates/arium-leptos/tests/common/: mod.rs
crates/arium-mcp/: Cargo.toml  README.md
crates/arium-mcp/src/: lib.rs
crates/arium-pool/: Cargo.toml  README.md
crates/arium-pool/src/: lib.rs
crates/arium-wire/: Cargo.toml
crates/arium-wire/src/: lib.rs
crates/arium/migrations/postgres/: 0001_init.sql  0002_password_reset.sql  0003_email_verification.sql  0004_mfa.sql  0005_roles.sql  0007_api_keys.sql  0009_resource_members.sql
crates/arium/migrations/sqlite/: 0001_init.sql  0002_password_reset.sql  0003_email_verification.sql  0004_mfa.sql  0005_roles.sql  0006_audit.sql  0007_api_keys.sql  0009_resource_members.sql
crates/arium/src/: api_key.rs  auth.rs  authz.rs  authz_bridge.rs  config.rs  extract.rs  install.rs  lib.rs  membership.rs  oauth.rs  pool.rs  sql_membership.rs
crates/arium/src/oauth/: github.rs  google.rs  microsoft.rs  oidc.rs
crates/arium/tests/: api_tokens.rs  audit.rs  bootstrap_admin.rs  email_pipeline.rs  email_verification.rs  membership.rs  mfa.rs  oauth_callback.rs  oauth_link.rs  oidc.rs  password_flow.rs  password_reset.rs  rbac.rs  resource_authz.rs  security_headers.rs
crates/arium/tests/common/: mod.rs
crates/dx-auth/: Cargo.toml
crates/dx-auth/migrations/postgres/: 0006_audit.sql
crates/dx-auth/src/: auth.rs  config.rs  install.rs  lib.rs  mail.rs  oauth.rs  pool.rs  server.rs  wire.rs
crates/dx-auth/src/ui/: auth_stylesheets.rs  mod.rs  oauth_providers.rs  permissions.rs  require_auth.rs
crates/dx-auth/src/ui/admin/: admin_screens.rs  audit_log.rs  mod.rs  role_screens.rs
crates/dx-auth/src/ui/components/: mod.rs
crates/dx-auth/src/ui/forgot_password/: component.rs  mod.rs  style.css
crates/dx-auth/src/ui/login_panel/: component.rs
crates/dx-auth/src/ui/reset_password/: component.rs
crates/dx-auth/src/ui/verify_email/: component.rs
crates/dx-auth/tests/: oauth_callback.rs
examples/basic/: Cargo.toml  README.md
examples/basic/assets/: app.css
examples/basic/src/: main.rs
examples/dioxus-authz-example/: Cargo.toml  README.md
examples/dioxus-authz-example/assets/: app.css
examples/dioxus-authz-example/src/: main.rs
examples/dioxus-fullstack-example/: .env.example  Cargo.toml  README.md  access-control-probe.sh
examples/dioxus-fullstack-example/src/: main.rs
examples/dioxus-rbac-example/: Cargo.toml
examples/leptos-authz-example/: Cargo.toml  README.md
examples/leptos-authz-example/src/: app.rs  lib.rs  main.rs
examples/leptos-fullstack-example/: .env.example  Cargo.toml  README.md  access-control-probe.sh
examples/leptos-fullstack-example/src/: app.rs  lib.rs  main.rs
examples/leptos-rbac-example/: Cargo.toml
examples/rmcp_example/: Cargo.toml  README.md
examples/rmcp_example/src/: main.rs  server.rs
(+29 files in other folders)
