[package]
name = "fullstack-auth-example"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus-web = { version = "0.7.9", features = ["hydrate"], optional = true }

axum = { version = "0.8.4", default-features = false, optional = true, features = ["macros"] }
tokio = { version = "1.48", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["auth"], optional = true }
tower = { version = "0.5.2", optional = true }
http = { version = "1.3.1", optional = true }

async-trait = { version = "0.1.88", optional = true }
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }

axum_session = { version = "0.16.0", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }
axum_session_sqlx = { version = "0.5.0", features = ["sqlite"], optional = true }

oauth2 = { version = "5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
argon2 = { version = "0.5", optional = true }
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "builder",
    "hostname",
], optional = true }

execute = "0.2.13"
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.98"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["web", "server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:async-trait",
    "dep:sqlx",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:http",
    "dep:tower",
    "dep:oauth2",
    "dep:reqwest",
    "dep:argon2",
    "dep:lettre",
]
web = ["dioxus/web", "dep:dioxus-web"]
