[package]
name = "arium-dioxus"
version.workspace = true
edition.workspace = true
# Held from publishing until dioxus-primitives ships a usable crates.io release
# (it's currently a git dep). Everything else is release-ready.
publish = false
description = "Dioxus 0.7 adapter for the arium auth engine: server fns + UI components."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = ["server", "ui", "sqlite", "oauth-github", "mfa", "mail", "ratelimit", "tokens"]

# Pulls the server engine in and turns on Dioxus's server runtime. The
# `arium` dep is target-gated to non-wasm below, so enabling `server` on a
# wasm client build is a no-op (and the client never enables it anyway).
server = ["dep:arium", "dep:axum", "dep:sqlx", "dep:axum_session_auth", "dioxus/server"]

# UI components (LoginPanel, etc.).
ui = ["dep:dioxus-primitives"]

# Capability flags. These must EXIST on the wasm client build so the
# `#[cfg(feature = "...")]`-gated server-fn DECLARATIONS in src/server.rs
# compile (Dioxus generates the client-side fetch stubs from them). The
# weak-dep `arium?/x` syntax forwards to the engine's matching feature only
# when `arium` is actually present — i.e. on the server build.
sqlite = ["arium?/sqlite"]
postgres = ["arium?/postgres"]
oauth-github = ["arium?/oauth-github"]
oauth-oidc = ["arium?/oauth-oidc"]
oauth-google = ["arium?/oauth-google"]
oauth-microsoft = ["arium?/oauth-microsoft"]
mfa = ["arium?/mfa"]
mail = ["arium?/mail"]
ratelimit = ["arium?/ratelimit"]
tokens = ["arium?/tokens"]

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
arium-wire = { workspace = true }
anyhow = "1.0.98"
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, optional = true }

# The server engine is needed only off-wasm and only under `server`; keeping
# it target-gated keeps sqlx/argon2/axum out of the browser bundle. The server
# fns themselves use axum extractors (Extension, http::Method) and one direct
# sqlx query, so those two crates are pulled in on the same server-only terms.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arium = { workspace = true, optional = true }
axum = { version = "0.8.4", default-features = false, features = ["macros"], optional = true }
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "runtime-tokio"], optional = true }
axum_session_auth = { version = "0.16.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"], default-features = false }
