[package]
name = "arium-leptos"
version.workspace = true
edition.workspace = true
description = "Leptos 0.8 adapter for the arium auth engine: server fns + UI components."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = ["ssr", "ui", "sqlite", "oauth-github", "mfa", "mail", "ratelimit", "tokens"]

# Server build. Pulls the engine + axum integration in and turns on Leptos's
# SSR runtime. Mirrors arium-dioxus's `server` feature, but Leptos selects
# server-vs-client by THIS cargo feature (and `#[cfg(feature = "ssr")]`), not by
# `cfg(target_arch = "wasm32")`. The crate is compiled twice — once with `ssr`
# (native server), once with `hydrate` (wasm client) — so the engine deps are
# gated on `ssr` and must never appear on the hydrate build.
ssr = [
    "dep:arium",
    "dep:axum",
    "dep:sqlx",
    "dep:axum_session_auth",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_router?/ssr",
]

# Client/wasm build (hydration). The wasm-bindgen entrypoint + panic hook
# live in the consuming app (see the example), not in this library.
hydrate = ["leptos/hydrate"]

# UI components (LoginPanel, etc.). Needs the router for the guards/navigation.
ui = ["dep:leptos_router"]

# Capability flags. These must EXIST on BOTH builds so the
# `#[cfg(feature = "...")]`-gated server-fn DECLARATIONS in src/server.rs
# compile (Leptos generates the client-side fetch stub from the same fn). The
# weak-dep `arium?/x` syntax forwards to the engine's matching feature only
# when `arium` is actually present — i.e. on the `ssr` build.
sqlite = ["arium?/sqlite"]
postgres = ["arium?/postgres"]
oauth-github = ["arium?/oauth-github"]
oauth-oidc = ["arium?/oauth-oidc"]
oauth-google = ["arium?/oauth-google"]
oauth-microsoft = ["arium?/oauth-microsoft"]
mfa = ["arium?/mfa"]
mail = ["arium?/mail"]
ratelimit = ["arium?/ratelimit"]
tokens = ["arium?/tokens"]

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", optional = true }
arium-wire = { workspace = true }
anyhow = "1.0.98"

# Server engine + axum integration. Plain optional deps enabled only by `ssr`
# (NOT target-gated): a hydrate build is also compiled and must never see them.
arium = { workspace = true, optional = true }
axum = { version = "0.8.4", default-features = false, features = ["macros"], optional = true }
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "runtime-tokio"], optional = true }
axum_session_auth = { version = "0.16.0", optional = true }
leptos_axum = { version = "0.8", optional = true }

# serde(_json) is the only dev-dep both tests share, and it compiles on every
# target — so it stays here. The native-only and wasm-only stacks are split
# below by target so a `--target wasm32` test build never tries to compile the
# tokio/sqlx/reqwest server stack (which doesn't build for wasm).
[dev-dependencies]
serde = "1"
serde_json = "1"

# Native server-fn HTTP round-trip test (tests/server_fn_roundtrip.rs): boots
# the real `install`-layered router on an ephemeral port and exercises
# register/login/profile/logout over HTTP. `cfg(not(wasm32))` keeps this stack
# out of the wasm test build; the test file itself is also `cfg`-guarded.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8.4", default-features = false }
leptos_axum = "0.8"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json"] }

# Wasm client-surface logic test (tests/wasm_client.rs): runs in Node via
# wasm-bindgen-test-runner (no browser), exercising the re-exported wire-type
# serde round-trip + the client `friendly_server_error` helper on the hydrate
# build. Pin tracks the `wasm-bindgen` version the CI runner installs.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
