[package]
name = "arium-wire"
version.workspace = true
edition.workspace = true
description = "Framework-agnostic wire types shared across arium auth crates."
keywords = ["authentication", "arium", "axum", "wire"]
categories = ["authentication", "web-programming"]
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
