[package]
name = "dx-auth"
version = "0.1.0"
edition = "2024"
publish = false
description = "Reusable authentication library for Dioxus 0.7 fullstack apps."

[lib]
path = "src/lib.rs"

[features]
default = ["server", "ui", "sqlite", "oauth-github", "mfa", "mail", "ratelimit"]

# Core server runtime — required for any backend functionality.
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tower",
    "dep:http",
    "dep:async-trait",
    "dep:sqlx",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:argon2",
    "dep:chrono",
    "dioxus/server",
]

# UI components (LoginPanel, etc.).
ui = ["dep:dioxus-primitives"]

# Backend selection — pick exactly one.
sqlite = ["sqlx/sqlite", "axum_session_sqlx/sqlite"]
postgres = ["sqlx/postgres", "axum_session_sqlx/postgres"]

# Optional per-capability features. All on by default; turn individual
# ones off to slim the build down (e.g. an OAuth-only app can drop
# `mail` and the email-send code disappears).
oauth-github = ["dep:oauth2", "dep:reqwest"]
mfa = ["dep:totp-rs"]
mail = ["dep:lettre"]
ratelimit = ["dep:tower_governor"]

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack"] }
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.98"

# UI
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, optional = true }

# Server core
axum = { version = "0.8.4", default-features = false, optional = true, features = ["macros"] }
tokio = { version = "1.48", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["auth"], optional = true }
tower = { version = "0.5.2", optional = true }
http = { version = "1.3.1", optional = true }
async-trait = { version = "0.1.88", optional = true }
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "migrate",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
axum_session = { version = "0.16.0", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }
axum_session_sqlx = { version = "0.5.0", default-features = false, optional = true }
argon2 = { version = "0.5", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

# Per-capability optional deps. Target-gated to non-wasm because the
# wasm/web client only needs the feature flags to be ON (to make the
# `#[cfg(feature = "mfa")]` etc. server-fn declarations visible so the
# dioxus macro can generate the client-side fetch stubs); the actual
# crates (lettre, totp-rs, reqwest, ...) are only used from inside
# `#[cfg(feature = "server")]` blocks and don't compile for wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oauth2 = { version = "5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "builder",
    "hostname",
], optional = true }
tower_governor = { version = "0.8", default-features = false, features = ["axum"], optional = true }
totp-rs = { version = "5", features = ["qr", "gen_secret"], optional = true }
